Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127488

qtbase tests crashing on Android

    XMLWordPrintable

Details

    • Android

    Description

      https://codereview.qt-project.org/c/qt/qtbase/+/575758/3#message-8ff39aca45002facff0f1b9651636a6804027698

      https://testresults.qt.io/logs/qt/qtbase/a66b0eaaf36eea84774d89b21ba747979da1100f/LinuxRHEL_8_8x86_64AndroidAndroid_ANYx86GCCqtci-linux-RHEL-8.8-x86_64-50-e25fa6AndroidTestRun_GenerateSBOM_Sccache_UseConfigure_VerifySBOM_WarningsAreErrors/03b170d8ee0a11a9df2e31e666de1a9072f30b9e/test_1721790441/log.txt.gz

      agent:2024/07/24 03:57:01 build.go:404: 177: BUILD SUCCESSFUL in 1s
      agent:2024/07/24 03:57:01 build.go:404: 177: 34 actionable tasks: 34 executed
      agent:2024/07/24 03:57:01 build.go:404: 177: Android package built successfully in 1.978 ms.
      agent:2024/07/24 03:57:01 build.go:404: 177:   -- File: /home/qt/work/qt/qtbase_standalone_tests/tests/auto/corelib/time/qdatetimeparser/android-build//build/outputs/apk/debug/android-build-debug.apk
      agent:2024/07/24 03:57:01 build.go:404: 177: 
      agent:2024/07/24 03:57:01 build.go:404: 177: Execute /opt/android/sdk/platform-tools/adb install -r -g /home/qt/work/qt/qtbase_standalone_tests/tests/auto/corelib/time/qdatetimeparser/android-build/tst_qdatetimeparser.apk.
      agent:2024/07/24 03:57:01 build.go:404: 177: Performing Streamed Install
      agent:2024/07/24 03:57:01 build.go:404: 177: Success
      agent:2024/07/24 03:57:01 build.go:404: 177: 
      agent:2024/07/24 03:57:01 build.go:404: 177: Execute /opt/android/sdk/platform-tools/adb shell am start -n org.qtproject.example.tst_qdatetimeparser/org.qtproject.qt.android.bindings.QtActivity -e applicationArguments "-o output.junitxml,junitxml -o output.txt,txt -o output.xml,xml" -e extraenvvars "UVRFU1RfRU5WSVJPTk1FTlQ9Y2k=".
      agent:2024/07/24 03:57:02 build.go:404: 177: Starting: Intent { cmp=org.qtproject.example.tst_qdatetimeparser/org.qtproject.qt.android.bindings.QtActivity (has extras) }
      agent:2024/07/24 03:57:02 build.go:404: 177: 
      agent:2024/07/24 03:57:02 build.go:404: 177: "Error: failed to retrieve the test's output.junitxml file."
      agent:2024/07/24 03:57:02 build.go:404: 177: ****** Begin logcat output ******
      agent:2024/07/24 03:57:02 build.go:404: 177: --------- beginning of main
      agent:2024/07/24 03:57:02 build.go:404: 177: 07-24 03:57:01.600 26320 26320 I qdatetimeparse: Late-enabling -Xcheck:jni
      agent:2024/07/24 03:57:02 build.go:404: 177: 07-24 03:57:01.612 26320 26320 W qdatetimeparse: Unexpected CPU variant for X86 using defaults: x86
      agent:2024/07/24 03:57:02 build.go:404: 177: 
      agent:2024/07/24 03:57:02 build.go:404: 177: ****** End logcat output ******
      agent:2024/07/24 03:57:02 build.go:404: 177: The retrieved crash logcat is empty
      agent:2024/07/24 03:57:02 build.go:404: 177: Execute /opt/android/sdk/platform-tools/adb uninstall org.qtproject.example.tst_qdatetimeparser.
      agent:2024/07/24 03:57:02 build.go:404: 177: Success
      agent:2024/07/24 03:57:02 build.go:404: 177: 
      agent:2024/07/24 03:57:02 build.go:404: 177: qt-testrunner.py     INFO: Test process exited with code: 1
      agent:2024/07/24 03:57:02 build.go:404: 177: qt-testrunner.py    ERROR: XML log file not found: /home/qt/work/testresults/tst_qdatetimeparser-1721793418611.xml
      agent:2024/07/24 03:57:02 build.go:404: 177: qt-testrunner.py    ERROR: exception:FileNotFoundError [Errno 2] No such file or directory: '/home/qt/work/testresults/tst_qdatetimeparser-1721793418611.xml'
      agent:2024/07/24 03:57:02 build.go:404: 177: qt-testrunner.py    ERROR: The test executable probably crashed, see above for details
      agent:2024/07/24 03:57:02 build.go:404: 177: qt-testrunner.py     INFO: Will re-run the full test executable
      agent:2024/07/24 03:57:02 build.go:404: 177: qt-testrunner.py    DEBUG: Running test command line: ['/home/qt/work/install/bin/androidtestrunner', '--path', '/home/qt/work/qt/qtbase_standalone_tests/tests/auto/corelib/time/qdatetimeparser/android-build', '--adb', '/opt/android/sdk/platform-tools/adb', '--skip-install-root', '--make', '"/opt/cmake-3.27.7/bin/cmake" --build /home/qt/work/qt/qtbase_standalone_tests --target tst_qdatetimeparser_make_apk', '--apk', '/home/qt/work/qt/qtbase_standalone_tests/tests/auto/corelib/time/qdatetimeparser/android-build/tst_qdatetimeparser.apk', '--ndk-stack', '/opt/android/android-ndk-r26b/ndk-stack', '--timeout', '855', '--verbose', '--', '-o', '/home/qt/work/testresults/tst_qdatetimeparser-1721793422609.xml,xml', '-o', '/home/qt/work/testresults/tst_qdatetimeparser-1721793422609.junit.xml,junitxml', '-o', '/home/qt/work/testresults/tst_qdatetimeparser-1721793422609.txt,txt', '-o', '-,txt']
      agent:2024/07/24 03:57:02 build.go:404: 177: Execute /opt/cmake-3.27.7/bin/cmake --build /home/qt/work/qt/qtbase_standalone_tests --target tst_qdatetimeparser_make_apk.
      agent:2024/07/24 03:57:02 build.go:404: 177: ninja: no work to do.
      agent:2024/07/24 03:57:02 build.go:404: 177: 
      agent:2024/07/24 03:57:02 build.go:404: 177: Execute /opt/android/sdk/platform-tools/adb install -r -g /home/qt/work/qt/qtbase_standalone_tests/tests/auto/corelib/time/qdatetimeparser/android-build/tst_qdatetimeparser.apk.
      agent:2024/07/24 03:57:03 build.go:404: 177: Performing Streamed Install
      agent:2024/07/24 03:57:03 build.go:404: 177: Success
      agent:2024/07/24 03:57:03 build.go:404: 177: 
      agent:2024/07/24 03:57:04 build.go:404: 177: Execute /opt/android/sdk/platform-tools/adb shell am start -n org.qtproject.example.tst_qdatetimeparser/org.qtproject.qt.android.bindings.QtActivity -e applicationArguments "-o output.xml,xml -o output.txt,txt -o output.junitxml,junitxml" -e extraenvvars "UVRFU1RfRU5WSVJPTk1FTlQ9Y2k=".
      agent:2024/07/24 03:57:04 build.go:404: 177: Starting: Intent { cmp=org.qtproject.example.tst_qdatetimeparser/org.qtproject.qt.android.bindings.QtActivity (has extras) }
      agent:2024/07/24 03:57:04 build.go:404: 177: 
      agent:2024/07/24 03:57:04 build.go:404: 177: "Error: failed to retrieve the test's output.xml file."
      agent:2024/07/24 03:57:04 build.go:404: 177: ****** Begin logcat output ******
      agent:2024/07/24 03:57:04 build.go:404: 177: --------- beginning of main
      agent:2024/07/24 03:57:04 build.go:404: 177: 07-24 03:57:03.636 26400 26400 I qdatetimeparse: Late-enabling -Xcheck:jni
      agent:2024/07/24 03:57:04 build.go:404: 177: 07-24 03:57:03.652 26400 26400 W qdatetimeparse: Unexpected CPU variant for X86 using defaults: x86
      agent:2024/07/24 03:57:04 build.go:404: 177: 
      agent:2024/07/24 03:57:04 build.go:404: 177: ****** End logcat output ******
      agent:2024/07/24 03:57:04 build.go:404: 177: The retrieved crash logcat is empty
      agent:2024/07/24 03:57:04 build.go:404: 177: Execute /opt/android/sdk/platform-tools/adb uninstall org.qtproject.example.tst_qdatetimeparser.
      agent:2024/07/24 03:57:04 build.go:404: 177: Success
      agent:2024/07/24 03:57:04 build.go:404: 177: 
      agent:2024/07/24 03:57:04 build.go:404: 177: qt-testrunner.py     INFO: Test process exited with code: 1
      agent:2024/07/24 03:57:04 build.go:404: 177: qt-testrunner.py    ERROR: XML log file not found: /home/qt/work/testresults/tst_qdatetimeparser-1721793422609.xml
      agent:2024/07/24 03:57:04 build.go:404: 177: qt-testrunner.py    ERROR: exception:FileNotFoundError [Errno 2] No such file or directory: '/home/qt/work/testresults/tst_qdatetimeparser-1721793422609.xml'
      agent:2024/07/24 03:57:04 build.go:404: 177: qt-testrunner.py    ERROR: The test executable probably crashed, see above for details
      agent:2024/07/24 03:57:04 build.go:404: 177: qt-testrunner.py    ERROR: Full test run failed repeatedly, aborting!
      agent:2024/07/24 03:57:04 build.go:404: 177: CMake Error at tst_qdatetimeparserWrapperRelWithDebInfo.cmake:18 (message):
      agent:2024/07/24 03:57:04 build.go:404: 177:   /home/qt/work/install/libexec/qt-testrunner.py --
      agent:2024/07/24 03:57:04 build.go:404: 177:   /home/qt/work/install/bin/androidtestrunner --path
      agent:2024/07/24 03:57:04 build.go:404: 177:   /home/qt/work/qt/qtbase_standalone_tests/tests/auto/corelib/time/qdatetimeparser/android-build
      agent:2024/07/24 03:57:04 build.go:404: 177:   --adb /opt/android/sdk/platform-tools/adb --skip-install-root --make
      agent:2024/07/24 03:57:04 build.go:404: 177:   "/opt/cmake-3.27.7/bin/cmake" --build
      agent:2024/07/24 03:57:04 build.go:404: 177:   /home/qt/work/qt/qtbase_standalone_tests --target
      agent:2024/07/24 03:57:04 build.go:404: 177:   tst_qdatetimeparser_make_apk --apk
      agent:2024/07/24 03:57:04 build.go:404: 177:   /home/qt/work/qt/qtbase_standalone_tests/tests/auto/corelib/time/qdatetimeparser/android-build/tst_qdatetimeparser.apk
      agent:2024/07/24 03:57:04 build.go:404: 177:   --ndk-stack /opt/android/android-ndk-r26b/ndk-stack --timeout 855 --verbose
      agent:2024/07/24 03:57:04 build.go:404: 177:   execution failed with exit code 3.
      agent:2024/07/24 03:57:04 build.go:404: 177: 
      agent:2024/07/24 03:57:04 build.go:404: 177: 
      agent:2024/07/24 03:57:04 build.go:404: 177/492 Test #177: tst_qdatetimeparser .............................***Failed    6.02 sec
      agent:2024/07/24 03:57:04 build.go:404: 99% tests passed, 1 tests failed out of 177
      agent:2024/07/24 03:57:04 build.go:404: Label Time Summary:
      agent:2024/07/24 03:57:04 build.go:404: tests/auto/concurrent/qtconcurrentfilter/tst_qtconcurrentfilter                                             =   0.00 sec*proc (0 test)
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qtandroidteam Qt Android Team
            mitch_curtis Mitch Curtis
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:

              Gerrit Reviews

                There are no open Gerrit changes